[gd_scene load_steps=4 format=3 uid="uid://ciqylm2td1ahs"]

[ext_resource type="Script" path="res://scripts/SecretArea.gd" id="1_bpxp5"]
[ext_resource type="PackedScene" uid="uid://un2silbvtri8" path="res://tilemaps/midgard_tile_map_secrets.tscn" id="2_j6b10"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyovn"]
size = Vector2(445, 389)

[node name="SecretArea" type="Area2D"]
collision_mask = 2
script = ExtResource("1_bpxp5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jyovn")

[node name="MidgardTileMap" parent="." instance=ExtResource("2_j6b10")]
scale = Vector2(4, 4)

[node name="MidgardTileMap2" parent="." instance=ExtResource("2_j6b10")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
